Release 2.4
Features
* Structure supports Callback members
* getByteBuffer from Pointer/Memory
* Allow GC of native libraries
* Facilitate use from non-Java contexts (JRuby et al.)
* Improve library path searching
* Handle Structure[] arguments
* Handle native long type

Bug Fixes
* Structure.toArray failed to initialize members
* Disallow explicit free of Structure/Memory
* Ensure native libraries are only loaded once until released